# rag-as-service

./: .env.example  .gitignore  README copy.md  README.md
apps/api/: .dockerignore  Dockerfile  F04TEMP.md  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_f01_registration_tenancy.py  002_sessions.py  20260720_f01_registration_tenancy.py  20260720_f05_conversations.py  20260721_f03_documents.py  20260721_f06_agent.py  20260722_f04_sections.py  20260722_f04temp_chunks.py  20260722_f07_data_model.py  20260722_merge_f03_f06.py  20260723_audit_cols_source_key.py  20260723_drop_redundant_indexes.py  20260723_f08_naming.py  20260724_drop_sections_level_chk.py  20260724_f13_faq_stats.py
apps/api/prompts/rules/: grounding.md
apps/api/prompts/system/: default.md
apps/api/scripts/: seed_f04temp_kb.py
apps/api/src/rag_api/: __init__.py  main.py
apps/api/src/rag_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/api/tests/: conftest.py  helpers.py
apps/api/tests/integration/: test_f01_registration.py  test_f02_email_auth.py  test_f03_doc_admin.py  test_f04_doc_indexing.py  test_f04temp_index_search.py  test_f05_conversations.py  test_f06_agent.py  test_f07_doc_indexing_data_model.py  test_f08_data_model_naming.py  test_f08_office_ooxml.py  test_f13_faq_suggestions.py  test_f14_deferred_conversations.py  test_health.py  test_registration_repository.py  test_schema_timestamps.py
apps/api/tests/unit/: test_conversation_title.py  test_document_file_types.py  test_document_versions.py  (+11 more)
(+179 files in other folders)
